# COFFEE_LANGGRAPH_REPO

./: .gitignore  DASHBOARD_ENHANCEMENT_SUMMARY.md  DASHBOARD_FIXES.md  DASHBOARD_README.md  FINAL_DASHBOARD_SUMMARY.md  README.md  Requirements.md  SIMPLIFIED_DASHBOARD_SUMMARY.md  alpha_dashboard.py  alpha_dashboard_simple.py  debug_env.py  env_template  example.py  example_alpha_seeker.py  example_websearch.py  langgraph.json  launch_dashboard.py  pyproject.toml  requirements.txt  run_dashboard.py  simple_dashboard.py  test_dashboard.py  test_sentinel_auth.py
.langgraph_api/: .langgraph_ops.pckl
alpha_seeker/: __init__.py
alpha_seeker/baseline_model/: EVALUATION_README.md  evaluate_model.py  evaluation_results.csv  main.py  pyproject.toml  top_k_worst_predictions.csv
alpha_seeker/baseline_model/best_coffee_model/: config.json
alpha_seeker/baseline_model/hackathon_fb/: baseline_model.py
alpha_seeker/baseline_model/patchtst-coffee-finetuned/checkpoint-354/: model.safetensors  optimizer.pt  rng_state.pth  scheduler.pt  trainer_state.json
alpha_seeker/common/: data_models.py
alpha_seeker/data_analyst/nodes/: alpha_generator.py
alpha_seeker/data_analyst/tools/: csv_analyzer.py
alpha_seeker/data_extractors/geospatial/: agent.py
alpha_seeker/data_extractors/web_news/: agent.py
alpha_seeker/orchestrator/: configuration.py  graph.py  state.py
alpha_seeker/orchestrator/nodes/: failure_analyzer.py  input_processor.py  region_selector.py
alpha_seeker/websearch_agent/: configuration.py  graph.py  state.py
alpha_seeker/websearch_agent/nodes/: query_generator.py  result_analyzer.py  search_executor.py  weAd.py
alpha_seeker/websearch_agent/tools/: web_search.py
coffee_langgraph/: __init__.py  config.py  graph_builder.py  main.py
coffee_langgraph/agents/: data_analyst_agent.py  geospatial_agent.py  logistics_agent.py  region_selector_agent.py  web_news_agent.py
coffee_langgraph/utils/: io.py  scoring.py
data/: dataset.csv
data/sample/: last_price.csv  logistics_sample.csv  news_sample.csv  price_forecast_sample.csv  weather_sample.csv
outputs/: run_20250823_184432.json
src/: graph_builder.py  main.py  state.py
src/agents/: geospatial_agent.py  logistics_agent.py  region_selector_agent.py  web_news_agent.py
src/utils/: data_fetchers.py
