[build-system]
requires = ["setuptools>=61.0", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "coffee-langgraph"
version = "0.1.0"
description = "Multi-Agent LangGraph system for Coffee commodity analysis with Bullish/Bearish sentiment signals"
readme = "README.md"
license = {file = "LICENSE"}
authors = [
    {name = "Coffee LangGraph Team"},
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Developers",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
]
requires-python = ">=3.11"
dependencies = [
    "langgraph>=0.1.20",
    "langchain>=0.2.14",
    "langchain-community>=0.3.1",
    "langchain-core>=0.3.1",
    "langgraph-api",
    "langgraph-cli[inmem]>=0.3.8",
    "typing_extensions>=4.9",
    "pandas>=2.1",
    "numpy>=1.25",
    "python-dotenv>=1.0",
    "rich>=13.7",
    "typer>=0.12",
    "requests",
    "lxml",  # for pandas.read_html
]

[project.optional-dependencies]
dev = [
    "pytest>=7.0",
    "black>=23.0",
    "isort>=5.0",
    "flake8>=6.0",
    "mypy>=1.0",
]

[project.scripts]
coffee-langgraph = "coffee_langgraph.main:app"

[project.urls]
Homepage = "https://github.com/tilaksharma/coffee-langgraph"
Repository = "https://github.com/tilaksharma/coffee-langgraph"
Issues = "https://github.com/tilaksharma/coffee-langgraph/issues"

[tool.setuptools]
packages = ["coffee_langgraph"]

[tool.setuptools.package-data]
coffee_langgraph = ["py.typed"]

[tool.black]
line-length = 88
target-version = ['py311']
include = '\.pyi?$'
extend-exclude = '''
/(
  # directories
  \.eggs
  | \.git
  | \.hg
  | \.mypy_cache
  | \.tox
  | \.venv
  | build
  | dist
)/
'''

[tool.isort]
profile = "black"
multi_line_output = 3
line_length = 88
known_first_party = ["coffee_langgraph"]

[tool.mypy]
python_version = "3.11"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
disallow_incomplete_defs = true
check_untyped_defs = true
disallow_untyped_decorators = true
no_implicit_optional = true
warn_redundant_casts = true
warn_unused_ignores = true
warn_no_return = true
warn_unreachable = true
strict_equality = true

[[tool.mypy.overrides]]
module = [
    "langgraph.*",
    "langchain.*",
    "pandas.*",
    "numpy.*",
]
ignore_missing_imports = true
