[build-system]
requires = ["setuptools>=64", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "hackathon_fb"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "pandas>=2.0.0",
    "numpy>=1.24.0",
    "torch>=2.0.0",
    "transformers>=4.30.0",
    "scikit-learn>=1.3.0",
    "datasets>=2.14.0",
    "accelerate>=0.20.0",
    "matplotlib>=3.7.0",
]

[tool.setuptools.packages.find]
where = ["."]
include = ["hackathon_fb*"]
